--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Realtime Board</title>
 <link rel="stylesheet" href="./styles.css" />
-<!-- ES Modules と defer 相当。モジュールなら基本 head でもOK -->
-<script type="module" src="./app.js"></script>
 <body>
   <canvas id="cv"></canvas>
+
   <div class="ui">
     <button id="joinBtn"><span id="onlineDot"></span><span id="status">オフライン</span></button>
-    <button data-color="#FF5A5A">赤</button>
-    <button data-color="#FFD166">黄</button>
-    <button data-color="#06D6A0">緑</button>
-    <button data-color="#118AB2">青</button>
-    <button data-color="#9D4EDD">紫</button>
+    <button class="btn" data-color="#FF5A5A">赤</button>
+    <button class="btn" data-color="#FFD166">黄</button>
+    <button class="btn" data-color="#06D6A0">緑</button>
+    <button class="btn" data-color="#118AB2">青</button>
+    <button class="btn" data-color="#9D4EDD">紫</button>
   </div>
+
+  <!-- ← ここに移動（bodyの最後） -->
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
