--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="ja">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Realtime Board</title>
-<link rel="stylesheet" href="./styles.css" />
+<title>Drow-board</title>
+<link rel="stylesheet" href="./styles.css?v=2" />
 <body>
   <canvas id="cv"></canvas>
 
   <div class="ui">
-    <button id="joinBtn"><span id="onlineDot"></span><span id="status">オフライン</span></button>
     <button class="btn" data-color="#FF5A5A">赤</button>
     <button class="btn" data-color="#FFD166">黄</button>
     <button class="btn" data-color="#06D6A0">緑</button>
@@ -16,7 +15,8 @@
     <button class="btn" data-color="#9D4EDD">紫</button>
   </div>
 
-  <!-- ← ここに移動（bodyの最後） -->
-  <script type="module" src="./app.js"></script>
+  <!-- bodyの最後。?v=2 はキャッシュ避け -->
+  <script type="module" src="./app.js?v=2"></script>
 </body>
 </html>
+styles.css
