--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <button class="btn" data-color="#9D4EDD">紫</button>
   </div>
     <!-- Photon Realtime SDK（グローバルに Photon が生える） -->
-  <script src="https://unpkg.com/photon-realtime/dist/photon-realtime.min.js"></script>
+  <script src="./vendor/photon.min.js?v=1"></script>
   
   <!-- 最後にアプリ本体（キャッシュ避けに ?v=6 など付ける） -->
-  <script type="module" src="./app.js?v=7"></script>
+  <script type="module" src="./app.js?v=9"></script>
 </body>
 </html>
 styles.css
+
 
 
