--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <canvas id="cv"></canvas>
 
   <div class="ui">
+    <button id="joinBtn" class="btn">再接続</button>
     <button class="btn" data-color="#FF5A5A">赤</button>
     <button class="btn" data-color="#FFD166">黄</button>
     <button class="btn" data-color="#06D6A0">緑</button>
@@ -22,6 +23,7 @@
 </body>
 </html>
 styles.css
+
 
 
 
