--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="お絵描き共有アプリ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://nano95nano.github.io/Drow-board.github.io/" />
-  <meta property="og:image" content="https://nano95nano.github.io/Drow-board.github.io/ogp.png" />
+  <meta property="og:image" content="https://nano95nano.github.io/Drow-board.github.io/ogp_v2.png" />
   <!-- （任意）サイズ明示： -->
   <!-- <meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"> -->
 
@@ -38,3 +38,4 @@
   <script type="module" src="./app.js?v=10"></script>
 </body>
 </html>
+
